Minor bug fix: adding new member auto-jump

--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -61,6 +61,10 @@ input, textarea {
 textarea {
     min-width: 13rem;
     min-height: 10rem;
+
+    @include tablet {
+        min-width: 20rem;
+    }
 }
 
 a {
